--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "@reduxjs/toolkit": "^1.9.5",
+    "lodash.debounce": "^4.0.8",
     "nori-store": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +49,7 @@
     "@soda/friendly-errors-webpack-plugin": "^1.8.1",
     "@squoosh/lib": "^0.5.3",
     "@types/app-root-path": "^1.2.5",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.17.12",
     "@types/react": "^18.2.21",
     "@types/react-dev-utils": "^9.0.11",
